apps/blog/overlays/prd/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://blog-tmp.devxp-tech.io
spec:
  hosts:
    - "blog-tmp.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: wordpress.blog.svc.lgsk8sp1.grupologos.local
